# onrobot

./: .gitignore  README.md
onrobo_rg_gazebo/: CMakeLists.txt  package.xml
onrobo_rg_gazebo/launch/: bringup_rg2_gazebo.launch  bringup_rg6_gazebo.launch
onrobot/: CMakeLists.txt  package.xml
onrobot_rg2_description/: CMakeLists.txt  README.md  package.xml
onrobot_rg2_description/config/: control_params.yaml
onrobot_rg2_description/launch/: bringup_rg2_gazebo.launch  disp_rg2_model.launch
onrobot_rg2_description/meshes/collision/: outer_knuckle.stl
onrobot_rg2_description/urdf/: onrobot_rg2.xacro  onrobot_rg2_gazebo.xacro  onrobot_rg2_model.xacro  onrobot_rg2_model_macro.xacro  onrobot_rg2_transmission.xacro
onrobot_rg2_visualization/: CMakeLists.txt  README.md  package.xml  visualize.rviz
onrobot_rg2_visualization/launch/: disp_onrobot_rg2_model.launch
onrobot_rg2_visualization/urdf/: onrobot_rg2.xacro  onrobot_rg2_model.xacro  onrobot_rg2_model_macro.xacro  onrobot_rg2_transmission.xacro
onrobot_rg6_description/: CMakeLists.txt  README.md  package.xml
onrobot_rg6_description/config/: control_params.yaml
onrobot_rg6_description/launch/: bringup_rg6_gazebo.launch  disp_rg6_model.launch
onrobot_rg6_description/urdf/: onrobot_rg6.xacro  onrobot_rg6_gazebo.xacro  onrobot_rg6_model.xacro  onrobot_rg6_model_macro.xacro  onrobot_rg6_transmission.xacro
onrobot_rg6_visualization/: CMakeLists.txt  README.md  package.xml  visualize.rviz
onrobot_rg6_visualization/launch/: disp_onrobot_rg6_model.launch
onrobot_rg6_visualization/urdf/: onrobot_rg6.xacro  onrobot_rg6_model.xacro  onrobot_rg6_model_macro.xacro
onrobot_rg_control/: CMakeLists.txt  package.xml  setup.py
onrobot_rg_control/config/: rg2_control_params.yaml  rg6_control_params.yaml
onrobot_rg_control/launch/: bringup.launch  bringup_dual.launch  bringup_server.launch
onrobot_rg_control/msg/: OnRobotRGOutput.msg
onrobot_rg_control/nodes/: OnRobotRGReset.py  OnRobotRGSimpleController.py  OnRobotRGSimpleControllerServer.py  OnRobotRGStatusListener.py  OnRobotRGTcpNode.py
onrobot_rg_control/nodes/DualChanger/: OnRobotRGDualServer.py  OnRobotRGStatusDualListen.py  OnRobotRGStatusDualListener.py  OnRobotRGTcpDualNode.py  README.md
onrobot_rg_control/src/onrobot_rg_control/: baseOnRobotRG.py
onrobot_rg_description/: CMakeLists.txt  README.md  package.xml
onrobot_rg_description/launch/: disp_rg2_model.launch  disp_rg6_model.launch
onrobot_rg_description/urdf/: onrobot_rg2.xacro  onrobot_rg2_gazebo.xacro  onrobot_rg2_model.xacro  onrobot_rg2_model_macro.xacro  onrobot_rg6.xacro  onrobot_rg6_gazebo.xacro  onrobot_rg6_model.xacro  onrobot_rg6_model_macro.xacro
onrobot_rg_gazebo/launch/: bringup_rg2_gazebo.launch  bringup_rg6_gazebo.launch
onrobot_rg_modbus_tcp/: CMakeLists.txt  package.xml  setup.py
onrobot_rg_modbus_tcp/src/onrobot_rg_modbus_tcp/: comModbusTcp.py
onrobot_rg_msgs/: CMakeLists.txt  package.xml
onrobot_rg_msgs/msg/: OnRobotRGInput.msg  OnRobotRGOutput.msg
onrobot_vg10_description/: CMakeLists.txt  README.md  package.xml
onrobot_vg10_description/launch/: disp_onrobot_vg10_model.launch
onrobot_vg10_description/urdf/: onrobot_vg10.xacro  onrobot_vg10_model.xacro  onrobot_vg10_model_macro.xacro
onrobot_vg10_visualization/: CMakeLists.txt  README.md  package.xml  visualize.rviz
onrobot_vg10_visualization/launch/: disp_onrobot_vg10_model.launch
onrobot_vg10_visualization/urdf/: onrobot_vg10.xacro  onrobot_vg10_model.xacro  onrobot_vg10_model_macro.xacro
onrobot_vg_control/: CMakeLists.txt  package.xml  setup.py
onrobot_vg_control/launch/: bringup.launch  bringup_server.launch
onrobot_vg_control/msg/: OnRobotVGOutput.msg
onrobot_vg_control/nodes/: OnRobotVGSimpleController.py  OnRobotVGSimpleControllerServer.py  OnRobotVGStatusListener.py  OnRobotVGTcpNode.py
onrobot_vg_control/src/onrobot_vg_control/: baseOnRobotVG.py
onrobot_vg_control/srv/: SetCommand.srv
onrobot_vg_description/: CMakeLists.txt  README.md  package.xml
onrobot_vg_description/launch/: disp_vg10_model.launch  disp_vgc10_1cup_model.launch  disp_vgc10_4cups_model.launch
onrobot_vg_description/urdf/: onrobot_vg10.xacro  onrobot_vg10_model.xacro  onrobot_vg10_model_macro.xacro  onrobot_vgc10_1cup.xacro  onrobot_vgc10_1cup_model.xacro  onrobot_vgc10_1cup_model_macro.xacro  onrobot_vgc10_4cups.xacro  onrobot_vgc10_4cups_model.xacro  onrobot_vgc10_4cups_model_macro.xacro
onrobot_vg_modbus_tcp/: CMakeLists.txt  package.xml  setup.py
onrobot_vg_modbus_tcp/src/onrobot_vg_modbus_tcp/: comModbusTcp.py
onrobot_vg_msgs/: CMakeLists.txt  package.xml
onrobot_vg_msgs/msg/: OnRobotVGInput.msg
onrobot_vgc10_description/: CMakeLists.txt  README.md  package.xml
onrobot_vgc10_description/launch/: disp_onrobot_vgc10_1cup_model.launch  disp_onrobot_vgc10_4cups_model.launch
onrobot_vgc10_description/urdf/: onrobot_vgc10_1cup.xacro  onrobot_vgc10_1cup_model.xacro  onrobot_vgc10_1cup_model_macro.xacro  onrobot_vgc10_4cups.xacro  onrobot_vgc10_4cups_model.xacro  onrobot_vgc10_4cups_model_macro.xacro
onrobot_vgc10_visualization/: CMakeLists.txt  README.md  package.xml  visualize.rviz
onrobot_vgc10_visualization/launch/: disp_onrobot_vgc10_1cup_model.launch  disp_onrobot_vgc10_4cups_model.launch  disp_onrobot_vgc10_model.launch
onrobot_vgc10_visualization/urdf/: onrobot_vgc10.xacro  onrobot_vgc10_1cup.xacro  onrobot_vgc10_1cup_model.xacro  onrobot_vgc10_1cup_model_macro.xacro  onrobot_vgc10_4cups.xacro  onrobot_vgc10_4cups_model.xacro  onrobot_vgc10_4cups_model_macro.xacro  onrobot_vgc10_model.xacro  onrobot_vgc10_model_macro.xacro
