<?xml version="1.0"?>
<package format="3">
  <name>onrobot</name>
  <version>1.0.0</version>
  <description>ROS drivers for OnRobot grippers</description>
  <maintainer email="kiyokawa@hlab.sys.es.osaka-u.ac.jp">Takuya Kiyokawa</maintainer>
  <author email="kiyokawa@hlab.sys.es.osaka-u.ac.jp">Takuya Kiyokawa</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>onrobot_rg_modbus_tcp</exec_depend>
  <exec_depend>onrobot_vg_modbus_tcp</exec_depend>
  <exec_depend>onrobot_rg_control</exec_depend>
  <exec_depend>onrobot_vg_control</exec_depend>
</package>
