<?xml version="1.0"?>
<package format="3">
  <name>onrobot_vg_control</name>
  <version>1.0.0</version>
  <description>Package to control an OnRobot VG gripper</description>
  <maintainer email="kiyokawa@hlab.sys.es.osaka-u.ac.jp">Takuya Kiyokawa</maintainer>
  <author email="kiyokawa@hlab.sys.es.osaka-u.ac.jp">Takuya Kiyokawa</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>onrobot_vg_modbus_tcp</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>