<?xml version="1.0"?>
<package format="2">
  <name>onrobot_vgc10_visualization</name>
  <version>1.0.0</version>
  <description>OnRobot VGC10 model description package</description>
  <license>MIT</license>
  <author email="taku8926@gmail.com">Takuya Kiyokawa</author>
  <maintainer email="taku8926@gmail.com">Takuya Kiyokawa</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>urdf</exec_depend>
</package>
